compilateurDeca/src/test/deca/context/invalid/sans_objet/comparaison/bool_egal_null.deca
// Description:
//    Test de contexte : comparaison type incompatible.
//
// Resultats:
//    Erreur contextuelle : Comparaison invalide entre bool et null.
//
// Historique:
//    cree le 13/01/2026

{
    if (true == null) {}
}